--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <fragment
+            app:defaultNavHost= "true"
+            android:id="@+id/navHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph ="@navigation/navigation_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/meowBottomNavigation"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+        </fragment>
 
         <com.etebarian.meowbottomnavigation.MeowBottomNavigation
             android:id="@+id/meowBottomNavigation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:layout_gravity="bottom"
             app:mbn_selectedIconColor="@color/white"
             app:mbn_circleColor="@color/active_button"
