--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,12 @@
 
         android:orientation="vertical"
         android:layout_width="match_parent"
+
         android:layout_height="match_parent">
 
         <fragment
             app:defaultNavHost= "true"
+            android:layout_marginBottom="52dp"
             android:id="@+id/navHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:navGraph ="@navigation/navigation_main"
@@ -26,6 +28,7 @@
 
         <com.etebarian.meowbottomnavigation.MeowBottomNavigation
             android:id="@+id/meowBottomNavigation"
+            android:background="@color/back_ground"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_gravity="bottom"
