--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -35,6 +35,7 @@
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="130dp"
+                android:contentDescription="@string/image"
                 android:layout_height="130dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="10dp"
@@ -67,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
                     android:textStyle="bold"
-                    android:text="50.000đ"
+                    android:text="@string/default_price"
                     android:textColor="@color/active_button"
                     />
                 <RatingBar
