--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#262626</color>
 
     
 <!--color resource-->
@@ -16,6 +16,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_green">#28FFBF</color>
     <color name="back_ground">#F3F3FF</color>
+    <color name="dark_pray">#707070</color>
+
 
 
 
