--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <dimen name="ranking_font_size">16sp</dimen>
+    <dimen name="product_font_size">12sp</dimen>
 </resources>
