--- a/app/src/main/res/layout/item_view_paper_categories.xml
+++ b/app/src/main/res/layout/item_view_paper_categories.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="imgCategory"
-            type="com.example.aposs_buyer.model.ImageCategory" />
+            type="com.example.aposs_buyer.model.Image" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
