--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,9 +19,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
+
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
             <LinearLayout
+
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -169,7 +171,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="240dp">
+                    android:layout_height="230dp">
                     <TextView
                         android:layout_marginTop="5dp"
                         android:id="@+id/ranking"
@@ -240,6 +242,32 @@
                         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/more"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/more"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/products"
+                        android:layout_marginTop="10dp"
+                        tools:listitem="@layout/item_product"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="2"
+                        productData="@{viewModel.products}"
+                        android:layout_width="match_parent"
+                        android:clipToPadding="false"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
             </LinearLayout>
 
 
