--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,91 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:background="@color/back_ground"
-    android:layout_height="match_parent">
+<layout>
 
-    <androidx.cardview.widget.CardView
-        android:layout_margin="8dp"
-        android:padding="5dp"
+    <data>
+
+        <variable
+            name="product"
+            type="com.example.aposs_buyer.model.HomeProduct" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="match_parent"
+        android:background="@color/back_ground">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="210dp"
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatToggleButton
-                android:id="@+id/favorite"
-                android:layout_width="20dp"
-                android:textOn=""
-                android:textOff=""
-                android:background="@drawable/favorite_toggle_selector"
-                android:layout_height="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="130dp"
-                android:contentDescription="@string/image"
-                android:layout_height="130dp"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="10dp"
-                android:src="@mipmap/ic_launcher_w"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_marginTop="5dp"
-                android:layout_marginHorizontal="10dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image">
-                <TextView
-                    android:layout_marginTop="3dp"
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:textSize="@dimen/product_font_size"
-                    android:text="@string/app_name"
-                    android:layout_height="wrap_content"
-                    />
-                <TextView
-                    android:layout_marginTop="2dp"
-                    android:id="@+id/price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/product_font_size"
-                    android:textStyle="bold"
-                    android:text="@string/default_price"
-                    android:textColor="@color/active_button"
-                    />
-                <RatingBar
-                    android:layout_marginTop="2dp"
-                    android:id="@+id/rating"
-                    android:isIndicator="false"
-                    android:secondaryProgressTint="@color/yellow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:rating="4.5"
-                    android:numStars="5"
-                    android:stepSize="0.5"
-                    style="@style/Widget.AppCompat.RatingBar.Small"
-                    android:progressTint="@color/yellow"
-                    />
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent">
 
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.appcompat.widget.AppCompatToggleButton
+                    android:id="@+id/favorite"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:background="@drawable/favorite_toggle_selector"
+                    android:checked="@={product.favorite}"
+                    android:textOff=""
+                    android:textOn=""
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardImage"
+                    android:layout_width="match_parent"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+                    <ImageView
+                        android:id="@+id/image"
+                        image="@{product.image.imageUri}"
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        android:contentDescription="@string/image"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/ic_launcher_w"
+                        />
+
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cardImage">
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="@{product.name}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/product_font_size" />
+
+                    <TextView
+                        android:id="@+id/price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:text="@{product.priceToString()}"
+                        android:textColor="@color/active_button"
+                        android:textSize="@dimen/product_font_size"
+                        android:textStyle="bold" />
+
+                    <RatingBar
+                        android:id="@+id/rating"
+                        style="@style/Widget.AppCompat.RatingBar.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:isIndicator="true"
+                        android:numStars="5"
+                        android:progressTint="@color/yellow"
+                        android:rating="@{product.rating}"
+                        android:secondaryProgressTint="@color/yellow"
+                        android:stepSize="0.5" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
