--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -152,7 +152,7 @@
             android:orientation="vertical"
             android:layout_marginTop="176dp"
             android:layout_marginHorizontal="18dp"
-            android:windowSoftInputMode="adjustResize"
+            android:fitsSystemWindows="true"
             android:elevation="8dp">
         <LinearLayout
             android:id="@+id/ln_message"
