--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="light_gray">#F4F6FF</color>
     <color name="light_black">#4D5A80</color>
     <color name="border_color">#979797</color>
+    <color name="person_color">#272422</color>
 </resources>
