--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -1,19 +1,308 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.aposs_buyer.viewmodel.PersonViewModel" />
+    </data>
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_main"
         tools:context=".uicontroler.fragment.PersionFragment">
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/back_ground"
+            tools:context=".uicontroler.fragment.MessageFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:layout_gravity="center"
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/person" />
+            android:backgroundTint="@color/back_ground"
+            android:text="@string/app_name"
+            app:elevation="0dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:liftOnScroll="false">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:expandedTitleGravity="top"
+                app:layout_scrollFlags="noScroll">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@drawable/bg_card"
+                    android:gravity="bottom"
+                    android:orientation="vertical"/>
+
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/light_green"
+                    app:layout_collapseMode="pin">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="20dp"
+                        android:gravity="center|top"
+                        android:orientation="vertical"
+                        android:paddingBottom="15dp">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:contentDescription="@string/image"
+                            android:src="@drawable/ic_logo" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal"
+                            android:gravity="right">
+                            <TextView
+                                android:id="@+id/title"
+                                android:layout_marginRight="88dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="32dp"
+                                android:text="@string/account"
+                                android:textColor="@color/white"
+                                android:textSize="30sp"
+                                android:textStyle="bold" />
+
+                            <ImageView
+                                android:layout_width="38dp"
+                                android:layout_height="38dp"
+                                android:contentDescription="@string/image"
+                                android:src="@drawable/ic__notifications" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.appcompat.widget.Toolbar>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+            <LinearLayout
+                android:id="@+id/ln_havingAccount"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="18dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="233dp"
+                android:layout_marginTop="120dp"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="173dp"
+                    android:background="@drawable/bg_account_box"
+                    android:gravity="center_vertical|center_horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.person.name}"
+                        android:textSize="16dp"
+                        android:layout_marginTop="10dp"
+                        android:textStyle="bold"
+                        android:textAllCaps="true"/>
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.person.email}"
+                        android:textStyle="bold"
+                        android:textSize="16dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <LinearLayout
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_edit_info">
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:layout_width="110dp"
+                            android:layout_height="110dp"
+                            android:scaleType="centerCrop"
+                            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+                            android:background="@drawable/bg_edit_info"
+                            image="@{viewModel.person.image.imageUri}" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="31.5dp"
+                    android:layout_height="31.5dp"
+                    android:background="@drawable/bg_edit_info"
+                    android:gravity="center"
+                    android:layout_marginLeft="90dp"
+                    android:layout_marginBottom="30dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_pencil" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:paddingBottom="60dp"
+                    android:paddingHorizontal="20dp"
+                    android:paddingTop="30dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/bg_account_box">
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_person_button"
+                        android:drawableStart="@drawable/ic_location_asset"
+                        android:drawableEnd="@drawable/ic_back"
+                        android:textAlignment="textStart"
+                        android:textAllCaps="false"
+                        android:text="   Address manager"
+                        android:textSize="16dp"
+                        android:textColor="@color/person_color"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginHorizontal="20dp"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_person_button"
+                        android:drawableStart="@drawable/ic_box"
+                        android:drawableEnd="@drawable/ic_back"
+                        android:textAlignment="textStart"
+                        android:textAllCaps="false"
+                        android:text="   My orders"
+                        android:textSize="16dp"
+                        android:textColor="@color/person_color"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginHorizontal="20dp"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_person_button"
+                        android:drawableStart="@drawable/ic_rate"
+                        android:textAllCaps="false"
+                        android:drawableEnd="@drawable/ic_back"
+                        android:textAlignment="textStart"
+                        android:text="   Rating"
+                        android:textSize="16dp"
+                        android:textColor="@color/person_color"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginHorizontal="20dp"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:background="@drawable/bg_person_button"
+                        android:drawableStart="@drawable/ic_baseline_settings_24"
+                        android:drawableEnd="@drawable/ic_back"
+                        android:textAlignment="textStart"
+                        android:text="   Setting"
+                        android:textSize="16dp"
+                        android:textColor="@color/person_color"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginHorizontal="20dp"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_person_button"
+                        android:drawableStart="@drawable/ic_sign_out"
+                        android:textAlignment="textStart"
+                        android:textAllCaps="false"
+                        android:text="   Sign out"
+                        android:textSize="16dp"
+                        android:textColor="@color/person_color" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginHorizontal="20dp"/>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ln_noAccount"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="18dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="233dp"
+                    android:layout_marginTop="120dp"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="173dp"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="40dp"
+                        android:paddingHorizontal="18dp"
+                        android:background="@drawable/bg_account_box"
+                        android:gravity="center_vertical|center_horizontal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="You did not signed in yet."
+                            android:textSize="16dp"
+                            android:layout_marginTop="10dp"
+                            android:textStyle="bold"
+                            android:elevation="0dp"/>
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:layout_marginTop="20dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_person_button"
+                            android:drawableStart="@drawable/ic_sign_out"
+                            android:textAlignment="textStart"
+                            android:textAllCaps="false"
+                            android:text="   Sign out"
+                            android:textSize="16dp"
+                            android:textColor="@color/person_color" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginHorizontal="20dp"/>
+                    </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     </FrameLayout>
 </layout>
